Word2Vec min-max updates.

--- a/models/Glove_Baselines_NELAGT19_FULL_DS.ipynb
+++ b/models/Glove_Baselines_NELAGT19_FULL_DS.ipynb
@@ -100718,6 +100718,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_vectors = pd.DataFrame() # creating empty final dataframe\n",
+    "count=1\n",
+    "stopwords = nltk.corpus.stopwords.words('english') # removing stop words\n",
+    "for doc in totalData['content']: # looping through each document and cleaning it\n",
+    "    temp = pd.DataFrame()  # creating a temporary dataframe(store value for 1st doc & for 2nd doc remove the details of 1st & proced through 2nd and so on..)\n",
+    "    for word in doc.split(' '): # looping through each word of a single document and spliting through space\n",
+    "        if word not in stopwords: # if word is not present in stopwords then (try)\n",
+    "            try:\n",
+    "                word_vec = embeddings[word] # if word is present in embeddings(goole provides weights associate with words(300)) then proceed\n",
+    "                temp = temp.append(pd.Series(word_vec), ignore_index = True) # if word is present then append it to temporary dataframe\n",
+    "            except:\n",
+    "                pass\n",
+    "    doc_vector = temp.min() # take the minimum of each column(w0, w1, w2,........w300)\n",
+    "    docs_vectors = docs_vectors.append(doc_vector, ignore_index = True) # append each document value to the final dataframe\n",
+    "    print(count)\n",
+    "    count+=1\n",
+    "docs_vectors.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_vectors = pd.DataFrame() # creating empty final dataframe\n",
+    "count=1\n",
+    "stopwords = nltk.corpus.stopwords.words('english') # removing stop words\n",
+    "for doc in totalData['content']: # looping through each document and cleaning it\n",
+    "    temp = pd.DataFrame()  # creating a temporary dataframe(store value for 1st doc & for 2nd doc remove the details of 1st & proced through 2nd and so on..)\n",
+    "    for word in doc.split(' '): # looping through each word of a single document and spliting through space\n",
+    "        if word not in stopwords: # if word is not present in stopwords then (try)\n",
+    "            try:\n",
+    "                word_vec = embeddings[word] # if word is present in embeddings(goole provides weights associate with words(300)) then proceed\n",
+    "                temp = temp.append(pd.Series(word_vec), ignore_index = True) # if word is present then append it to temporary dataframe\n",
+    "            except:\n",
+    "                pass\n",
+    "    doc_vector = temp.max() # take the maximum of each column(w0, w1, w2,........w300)\n",
+    "    docs_vectors = docs_vectors.append(doc_vector, ignore_index = True) # append each document value to the final dataframe\n",
+    "    print(count)\n",
+    "    count+=1\n",
+    "docs_vectors.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
